--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -11,7 +11,7 @@ body{
 
 	border-radius:10px;
 	margin:10px;
-	margin-bottom: 20px;
+	/*margin-bottom: 10px;*/
 	font-size: 1.5rem;
 	padding: 1rem .5rem;
 	transition: all 0.25s;
@@ -21,6 +21,7 @@ body{
 	background: rgba(0,0,0,0.2);
 	text-shadow: 0 0 5px black; 
 	float:left;
+
 	/*text-shadow: h-shadow v-shadow blur-radius color|none|initial|inherit*/
 }
 
@@ -31,19 +32,23 @@ body{
 
 .playing {
 	transform: scale(2);
+	background-color: rgba(255, 0, 247, 0.31);
 	border-color:#ffc600;
-	box-shadow: 0 0 10x #ffc600;
+	box-shadow: 0 0 10px #ffc600;
 	/*animation: myRotate .8s 1;*/
 /*	box-shadow: none|h-offset v-offset blur spread color |inset|initial|inherit;*/
 }
 
 kbd{
 	display: block;
+	transition: all 0.25s;
 	font-size: 40px;
 	animation: myRotate 1.2s infinite;
-
-
-}
+	background-color: rgba(255, 0, 247, 0.31);
+	border-radius: 100% ;
+	padding: 10px 0 10px 0;
+	
+	}
 
 .sound{
 	font-size: 1.2rem;
@@ -54,7 +59,7 @@ kbd{
 
 .keys{
 	position: absolute;
-	top:100px;
+	top:130px;
 	max-width: 1100px;
 	left:166px;
 
@@ -62,11 +67,14 @@ kbd{
 }
 
 h1{
-	text-align: center;
+	position: relative;
+	/*text-align: center;*/
 	font-family: 'Lobster', cursive;
 	font-size:80px;
 	margin:0;
-	color: darkviolet;
+	color: #f6087c;
+	transition: all 1s;
+	animation: myMove 2s infinite;
 
 }
 
@@ -117,5 +125,47 @@ h1{
 
 }
 
+
+
+@keyframes myMove{
+
+0% {left: 0px;}
+
+25% {left: 275px;}
+
+50% {left:550px;}
+
+75% {left:275px;}
+
+100% {left:0px   ;}
+
+}
+@-webkit-keyframes myMove{
+
+0% {left: 0px;}
+
+25% {left: 275px;}
+
+50% {left:550px;}
+
+75% {left:275px;}
+
+100% {left:0px   ;}
+
+}
+
+@-moz-keyframes myMove{
+
+0% {left: 0px;}
+
+25% {left: 275px;}
+
+50% {left:550px;}
+
+75% {left:275px;}
+
+100% {left:0px   ;}
+
+}
 
 
