--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -43,10 +43,10 @@ kbd{
 	display: block;
 	transition: all 0.25s;
 	font-size: 40px;
-	animation: myRotate 1.2s infinite;
+	animation: vibrate .9s infinite;
 	background-color: rgba(255, 0, 247, 0.31);
 	border-radius: 100% ;
-	padding: 10px 0 10px 0;
+	padding: 5px 0 5px 0;
 	
 	}
 
@@ -59,7 +59,7 @@ kbd{
 
 .keys{
 	position: absolute;
-	top:130px;
+	top:115px;
 	max-width: 1100px;
 	left:166px;
 
@@ -70,16 +70,62 @@ h1{
 	position: relative;
 	/*text-align: center;*/
 	font-family: 'Lobster', cursive;
-	font-size:80px;
-	margin:0;
+	font-size:60px;
+	margin-left: 100px;
+	margin-top: -5px;
+	margin-top: -5px;
 	color: #f6087c;
 	transition: all 1s;
 	animation: myMove 2s infinite;
 
 }
 
+.header{
+	animation: vibrate 1s infinite;
+}
 
 
+@keyframes myMove{
+
+0% {left: 0px;}
+
+25% {left: 275px;}
+
+50% {left:550px;}
+
+75% {left:275px;}
+
+100% {left:0px   ;}
+
+}
+
+@keyframes vibrate{
+
+0% {transform: scale(1.1);}
+
+50% {transform: scale(.8);}
+
+100% {transform: scale(1.1);}
+
+}
+
+@-webkit-keyframes vibrate{
+
+0% {transform: scale(1);}
+
+50% {transform: scale(.8);}
+
+100% {transform: scale(1);}
+
+@-moz-keyframes vibrate{
+
+0% {transform: scale(1);}
+
+50% {transform: scale(.8);}
+
+100% {transform: scale(1);}
+
+}
 
 
 
@@ -127,19 +173,7 @@ h1{
 
 
 
-@keyframes myMove{
 
-0% {left: 0px;}
-
-25% {left: 275px;}
-
-50% {left:550px;}
-
-75% {left:275px;}
-
-100% {left:0px   ;}
-
-}
 @-webkit-keyframes myMove{
 
 0% {left: 0px;}
