--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -8,7 +8,6 @@ body{
 
 .key{
 	border:4px solid black;
-
 	border-radius:10px;
 	margin:10px;
 	/*margin-bottom: 10px;*/
@@ -25,6 +24,14 @@ body{
 	/*text-shadow: h-shadow v-shadow blur-radius color|none|initial|inherit*/
 }
 
+.key:hover{
+	animation: myRotate 1.2s infinite;	
+	border-color:#ffc600;
+	box-shadow: 0 0 50px #ffc600;
+
+}
+
+
 #s{
 	margin-left: 40px;
 	margin-right: 40px;
@@ -35,7 +42,6 @@ body{
 	background-color: rgba(255, 0, 247, 0.31);
 	border-color:#ffc600;
 	box-shadow: 0 0 10px #ffc600;
-	/*animation: myRotate .8s 1;*/
 /*	box-shadow: none|h-offset v-offset blur spread color |inset|initial|inherit;*/
 }
 
@@ -49,6 +55,7 @@ kbd{
 	padding: 5px 0 5px 0;
 	
 	}
+
 
 .sound{
 	font-size: 1.2rem;
@@ -108,7 +115,19 @@ h1{
 100% {transform: scale(1.1);}
 
 }
+@keyframes myRotate{
 
+0% {transform: rotate(0deg);}
+
+25% {transform: rotate(90deg);}
+
+50% {transform: rotate(180deg);}
+
+75% {transform: rotate(270deg);}
+
+100% {transform: rotate(360deg);}
+
+}
 @-webkit-keyframes vibrate{
 
 0% {transform: scale(1);}
@@ -129,19 +148,7 @@ h1{
 
 
 
-@keyframes myRotate{
 
-0% {transform: rotate(0deg);}
-
-25% {transform: rotate(90deg);}
-
-50% {transform: rotate(180deg);}
-
-75% {transform: rotate(270deg);}
-
-100% {transform: rotate(360deg);}
-
-}
 
 @-webkit-keyframes myRotate{
 
